--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <!-- Input and Button -->
           <input type="text" id="inputsign">
           <br>
-          <button id="mybtn" class="btn btn-info" onclick="getSign()">Revelation</button>
+          <button id="mybtn" class="btn btn-info" onclick="getSign()">Learn More</button>
         </div>
 
         <!-- List of Star Sign Names and Dates -->
